fixed the problem with the error page not showing the background image

--- a/css/app.css
+++ b/css/app.css
@@ -1,4 +1,4 @@
-body, #errorDiv, .winnerBody {
+body {
   font-family: Arial, sans-serif;
   background-image: url(https://wallpapercave.com/wp/wp1945897.jpg);
   background-size: cover;
